@@ -2,7 +2,8 @@ Principle author.
 Tom Gilbert (gilbrit, giblet, grubby) <gilbertt@linuxbrit.co.uk>
 
 Paul Duncan (pabs) <pabs@pablotron.org>
-    - cam, wget fixups, mouse-button swapping options, rotation and more.
+    - cam, wget fixups, mouse-button swapping options, rotation,
+      xinerama support, menu backgrounds, and more.
 
 Richard Lowe (richlowe) <richlowe@btinternet.com>
     - background setting code, thumbnail patches.
@@ -27,6 +28,9 @@ Omar Harriott <omar.harriott@csun.edu>
 
 Panagiotis Issaris <takis.issaris@skynet.be>
     - keypad buttonpresses
+
+Jon Bernard <jbernard@roanoke.edu>
+    - xinerama bugfix
 
 Thanks to:
 Michael Jennings <mej@eterm.org>
