@@ -97,6 +97,9 @@ void show_version(void);
 int feh_main_iteration(int block);
 void feh_handle_event(XEvent * ev);
 void init_x_and_imlib(void);
+#ifdef HAVE_LIBXINERAMA
+void init_xinerama(void);
+#endif /* HAVE_LIBXINERAMA */
 void init_multiwindow_mode(void);
 void init_thumbnail_mode(void);
 void init_collage_mode(void);
